--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/dev.ts",
-    "dev:debug": "LOG_LEVEL=debug tsx watch src/dev.ts"
+    "dev": "bun run --watch src/index.ts",
+    "dev:debug": "LOG_LEVEL=debug bun run --watch src/dev.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.0.0",
     "@ai-sdk/groq": "^1.0.0",
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.18.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@t3-oss/env-core": "^0.11.1",
     "ai": "^4.0.0",
     "discord.js": "^14.16.3",
     "fast-xml-parser": "^4.5.0",
+    "ffmpeg-static": "^5.2.0",
+    "play-dl": "^1.9.7",
+    "sodium-native": "^4.3.1",
     "yt-search": "^2.12.1",
     "ytdl-core": "^4.11.5",
     "zod": "^3.23.8"
