--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ai": "^4.0.0",
     "discord.js": "^14.16.3",
     "fast-xml-parser": "^4.5.0",
+    "ffmpeg-static": "^5.2.0",
     "play-dl": "^1.9.7",
     "sodium-native": "^4.3.1",
     "yt-search": "^2.12.1",
