--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@ai-sdk/groq": "^1.0.0",
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.18.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@t3-oss/env-core": "^0.11.1",
     "ai": "^4.0.0",
     "discord.js": "^14.14.1",
-    "ffmpeg-static": "^5.2.0",
     "play-dl": "^1.9.7",
     "sodium-native": "^4.0.4",
     "zod": "^3.22.4"
