feat: add slota

--- a/Dockerfile.slota
+++ b/Dockerfile.slota
@@ -21,7 +21,7 @@ RUN bun install --frozen-lockfile
 COPY . .
 
 # Build the application
-RUN bun run build
+RUN bun run build:slota
 
 # Production stage
 FROM oven/bun:1-slim AS production
