--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.18.0",
     "@t3-oss/env-core": "^0.11.1",
+    "@types/yt-search": "^2.10.3",
+    "@vreden/youtube_scraper": "^1.2.7",
     "ai": "^4.0.0",
     "discord.js": "^14.14.1",
     "play-dl": "^1.9.7",
     "sodium-native": "^4.0.4",
+    "youtube-dl-exec": "^3.0.21",
+    "youtubei.js": "^13.4.0",
+    "yt-search": "^2.13.1",
     "zod": "^3.22.4"
   }
 }
